[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 252.0
margin_top = 5.0
margin_right = 634.0
margin_bottom = 95.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 253.0
margin_top = 124.0
margin_right = 635.0
margin_bottom = 214.0

[node name="Label" type="Label" parent="."]
margin_left = 271.0
margin_top = 357.0
margin_right = 650.0
margin_bottom = 464.0
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 267.0
margin_top = 219.0
margin_right = 644.0
margin_bottom = 331.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 697.0
margin_top = 19.0
margin_right = 904.0
margin_bottom = 99.0
text = "Defina as variáveis"

[node name="Button2" type="Button" parent="."]
margin_left = 706.0
margin_top = 233.0
margin_right = 910.0
margin_bottom = 321.0
text = "Printa o número"

[node name="Button3" type="Button" parent="."]
margin_left = 703.0
margin_top = 121.0
margin_right = 905.0
margin_bottom = 206.0
text = "Printa o nome"

[node name="Label3" type="Label" parent="."]
margin_left = 85.0
margin_top = 38.0
margin_right = 319.0
margin_bottom = 124.0
text = "Insira o número:"

[node name="Label4" type="Label" parent="."]
margin_left = 84.0
margin_top = 157.0
margin_right = 318.0
margin_bottom = 243.0
text = "Insira o nome"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
